--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,7 @@
   <groupId>NaukriAutomation</groupId>
   <artifactId>NaukriAutomation</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
 
 <dependencies>  
 
@@ -29,10 +30,22 @@
     <scope>test</scope>
 </dependency>
 
-
-
-
 </dependencies>
+
+ <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-surefire-plugin</artifactId>
+         <configuration>
+            <suiteXmlFiles>
+              <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
+            </suiteXmlFiles>
+         </configuration> 
+      </plugin>
+    </plugins>
+  </build>
+  
 
   	
   
